[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pyarrow>=21.0.0",
    "pyserial>=3.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "serial>=0.0.97",
]
